Added first intermidate and mart models

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,4 +26,16 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
+models:
+  leap_ai_case:
+    staging:
+      +materialized: view
+      +schema: STAGING
 
+    intermediate:
+      +materialized: view
+      +schema: INTERMEDIATE
+
+    marts:
+      +materialized: table
+      +schema: MART
