Added CI test model and CI yml

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -2,14 +2,14 @@ version: 2
 
 sources:
   - name: raw_amazon
-    database: LEAP_STAGING
+    database: LEAP_DEV
     schema: RAW
     tables:
       - name: AMAZON_PURCHASES_RAW
       - name: AMAZON_SURVEY_RAW
 
   - name: raw_fred
-    database: LEAP_STAGING
+    database: LEAP_DEV
     schema: RAW
     tables:
       - name: FRED_MACRO_RAW
