--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10.0
+          python-version: 3.10.0-alpha.1
 
       - name: Install dbt Snowflake adapter
         run: pip install dbt-snowflake
