--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -12,7 +12,15 @@ jobs:
 
     env:
       DBT_PROFILES_DIR: .
-
+      SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+      SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+      SNOWFLAKE_ROLE: TRANSFORM
+      SNOWFLAKE_WAREHOUSE: COMPUTE_WH
+      SNOWFLAKE_DATABASE_DEV: LEAP_DEV
+      SNOWFLAKE_SCHEMA_DEV: DBT_DEV
+      SNOWFLAKE_DATABASE_PROD: LEAP_PROD
+      SNOWFLAKE_SCHEMA_PROD: DBT_PROD
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
